changed name to qrcode.js

--- a/ajax/libs/qrcode.js/package.json
+++ b/ajax/libs/qrcode.js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrcodejs",
+  "name": "qrcode.js",
   "version": "0.0.1",
   "description": "Cross-browser QRCode generator for javascript",
   "filename": "qrcode.js",
